# machine_learning

DeepLearning/: Activation_Functions.ipynb  Backprop.ipynb  Classification_VS_Regression.ipynb  Cost_function.ipynb  Decision_Boundary.ipynb  Decision_Trees.ipynb  Derivatives.ipynb  Diagnosing_Bias_and_Variance.ipynb  Feature_Scaling_and_Learning_Rate.ipynb  Gradient_Descent_Logistical_Regression.ipynb  Linear_Regression.ipynb  Linear_Regression_Cost_Function.ipynb  Linear_Regression_Model_Representation.ipynb  LogisticLoss.ipynb  Logistic_Regression.ipynb  MAIN_Advise_for_Applying.ipynb  MAIN_Anomaly_Detection.ipynb  MAIN_Collaborative_RecSys_Assignment.ipynb  MAIN_Decision_Trees.ipynb  MAIN_Deep_Q_Learning.ipynb  MAIN_K-Means_Clustering.ipynb  MAIN_Manual_Neural_Networks.ipynb  MAIN_Softmax.ipynb  Manual_Neural_Network_CoffeeRoasting_Numpy.ipynb  Model_Evaluation_and_Selection.ipynb  Neurons_and_Layers.ipynb  Numpy_Vectorization_Soln.ipynb  Overfitting.ipynb  README.md  Regularization.ipynb  Sigmoid_function.ipynb  Sklearn_GD.ipynb  SoftMax.ipynb  TensorFlow_CoffeeRoasting.ipynb  Tree_Ensemble.ipynb
Feature_Engineering/: 1_bqml_basic_feat_eng_bqml-lab.ipynb
GCP-TensorFlow-Keras/: 2_dataset_api.ipynb  3_keras_sequential_api.ipynb  neural_network.ipynb  preprocessing_layers.ipynb
LangChain/: L1-Model_prompt_parser.ipynb  L3-Chains.ipynb  L6-Agents.ipynb
Machine_Learning_In_Production/: README.md  server-coursera.ipynb
Pytorch/: linear_regression.py  neural_network.py  neural_network_rent_predictor.py  rag.py  (+1 more)
Setup/: pyproject.toml
Setup/csv_linter/: main.py
(+26 files in other folders)
